# godot-sweeper

./: .gitignore  README.md  pyproject.toml  test_core.py
godot_sweeper/: __init__.py  __main__.py  app.py  core.py
