[project]
name = "godot-sweeper"
version = "0.1.0"
description = "Clean Godot's .godot/ cache safely with a small GUI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PySide6>=6.5"]

[project.scripts]
godot-sweeper = "godot_sweeper.app:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
